--- a/Diplom/client/package.json
+++ b/Diplom/client/package.json
@@ -8,8 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.20",
-    "@types/react": "^18.0.29",
+    "@types/node": "^16.18.23",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.4",
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "tar": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,8 +46,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.1",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1"
   }
 }
